--- a/reactjs/src/css/FlightSearch.css
+++ b/reactjs/src/css/FlightSearch.css
@@ -2,7 +2,7 @@
 
 .flight-search-form {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 20px;
   background: #ffffff;
   border: 2px solid #f4f4f4;
@@ -39,6 +39,18 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  flex: 1;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+}
+
+.location-icon {
+  cursor: pointer;
+  margin-left: 10px;
+  color: #0074d9;
 }
 
 .select {
