--- a/reactjs/src/css/Map.css
+++ b/reactjs/src/css/Map.css
@@ -1,12 +1,12 @@
 .map-container {
-    height: 500px;
+  height: 500px;
 }
 
 .marker {
-    background-image: url('../images/mapbox-icon.png');
-    background-size: cover;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
+  background-image: url("../images/placeholder.png");
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
